tests/ui/const-generics/default-ty-closure.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/default-ty-closure.rs:3:20
   |
LL | struct X<const FN: fn() = { || {} }>;
   |                    ^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

